# libmediacodec

./: BUILDING.md  CMakeLists.txt  README.md  av1_decoder.cc  av1_decoder.h  av1_encoder.cc  av1_encoder.h  h264_decoder.cc  h264_decoder.h  h264_encoder.cc  h264_encoder.h  hevc_decoder.cc  hevc_decoder.h  hevc_encoder.cc  hevc_encoder.h  media_image_utils.cc  media_image_utils.h  media_video_encoder.cc  media_video_encoder.h  opus_decoder.cc  opus_decoder.h  opus_encoder.cc  opus_encoder.h  vcpkg.json  vp8_decoder.cc  vp8_decoder.h  vp8_encoder.cc  vp8_encoder.h  vp9_decoder.cc  vp9_decoder.h  vp9_encoder.cc  vp9_encoder.h
accelerated/: nvidia_av1_encoder.cc  nvidia_av1_encoder.h  nvidia_h264_encoder.cc  nvidia_h264_encoder.h  nvidia_hevc_encoder.cc  nvidia_hevc_encoder.h
examples/: CMakeLists.txt  README.md  h264_encoder.cc  nvidia_av1_encoder.cc  nvidia_h264_encoder.cc  nvidia_hevc_encoder.cc  vp8_encoder.cc  vp9_encoder.cc
